<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".SplashActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="93dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:tint="@color/colorText"
        app:srcCompat="@drawable/ic_double" />

    <TextView
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/no_doubles"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_find_tourney"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/find_tournament"
            android:layout_marginBottom="10dp"/>
        
        <Button
            android:id="@+id/btn_admin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="75dp"
            android:background="@color/colorPrimary"
            android:text="@string/organizer_login" />
    </LinearLayout>

</RelativeLayout>